--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <img src="img/2.jpg" class="card_photo">
                   </div>
                 <div class="card_content">
-                <h3>Marriage on 4th Nov </h3>
+                <h3>Marriage 4th Nov </h3>
                 <p>Born in Jobner. I think that`s enough.</p>
               </div>
               </div> <!-- card three ends here -->
