--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               </div> <!-- card one ends here -->
               <div class="card_two card">
                   
-                <div class="card_content">
+                <div class="card_content margin">
                 <h3>Prashant<img src="img/groom.svg" class="card_icon"></h3>
                 <p>Born in Jobner. I think that`s enough.</p>
               </div>
