--- a/index.html
+++ b/index.html
@@ -80,27 +80,40 @@
                   </div>
                 <div class="card_content">
                 <h3>Neha Nogia <img src="img/bride.svg" class="card_icon"></h3>
-                <p>Born in Jobner. I think that`s enough.</p>
+                <p>Bride. Born in Jobner.</p>
+                <p class="down_icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></p>
               </div>
               </div> <!-- card one ends here -->
+              <div class="neha_show default">
+                <p>A great girl with a great smile. I don`t know iski shaadi kaise ho rahi hai. I wish the groom all the very best.</p>
+              </div>
               <div class="card_two card">
                 <div class="card_content margin">
                 <h3>Prashant<img src="img/groom.svg" class="card_icon"></h3>
-                <p>Born in Jobner. I think that`s enough.</p>
+                <p>Groom. Born in Agra.</p>
+                <p class="down_icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></p>
               </div>
               <div class="card_image_2">
                     <img src="img/prashant.jpg" class="card_photo">
                   </div>
               </div> <!-- card 2 ends here  -->
+              <div class="neha_show">
+                <p>Decent | Sincere | Responsible | Gentleman. I met this guy only twice and I must say he`s got a very positive vibe.</p>
+                <p>Note to groom: Take care of my sister or I will <span>kill you</span></p>
+              </div>
               <div class="card_one card card_three">
                   <div class="card_image">
                     <img src="img/2.jpg" class="card_photo">
                   </div>
                 <div class="card_content">
                 <h3>Marriage 4th Nov </h3>
-                <p>Born in Jobner. I think that`s enough.</p>
+                <p>Main Event</p>
+                <p class="down_icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></p>
               </div>
               </div> <!-- card three ends here -->
+              <div class="neha_show default">
+                <p>Yes! Bht sarra khana. I know. Right? Bas isi din to aana hai shaadi mein. So please do come.</p>
+              </div>
               <div class="card_one card card_four">
                   <div class="card_image">
                     <img src="img/neha-family.jpg" class="card_photo">
@@ -108,8 +121,12 @@
                 <div class="card_content">
                 <h3>Neha`s Family</h3>
                 <p>Born in Jobner. I think that`s enough.</p>
+                <p class="down_icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></p>
               </div>
               </div> <!-- card four ends here -->
+              <div class="neha_show default">
+                <p>Graduated from IIT Mumbai</p>
+              </div>
               <div class="card_one card card_five">
                   <div class="card_image">
                     <img src="img/prashant-family.png" class="card_photo">
@@ -117,8 +134,12 @@
                 <div class="card_content">
                 <h3>Prashant`s Family</h3>
                 <p>Born in Jobner. I think that`s enough.</p>
+                <p class="down_icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></p>
               </div>
               </div> <!-- card five ends here -->
+              <div class="neha_show default">
+                <p>Graduated from IIT Mumbai</p>
+              </div>
               <div class="card_one card card_six">
                   <div class="card_image">
                     <img src="img/neha-family.jpg" class="card_photo">
@@ -126,48 +147,162 @@
                 <div class="card_content">
                 <h3>Neha`s Family</h3>
                 <p>Born in Jobner. I think that`s enough.</p>
+                <p class="down_icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></p>
               </div>
               </div> <!-- card six ends here -->
+              <div class="neha_show default">
+                <p>Graduated from IIT Mumbai</p>
+              </div>
+
+              <div class="thank text-center">
+                <h3 class="thank_note">Thank you for coming</h3>
+                <img src="img/thank.gif" class="thank_img">
+              </div>
               </div> <!-- events ends here-->
 
               <div id="timeline" class="tab-pane fade">
                 <div class="timeline_div">
                   <div class="first_nov">
-                    <h3 class="day_title">Today</h3>
+                    <h3 class="day_title">1st Nov 17</h3>
                     <div class="event">
-                      <span>6:00 AM</span>
-                      <div class="event_content">Morning Ritual</div>
+                      <span>1:00 PM</span>
+                      <div class="event_content">Arrival in Jaipur</div>
                     </div>
                     <div class="event">
-                      <span>6:00 AM</span>
-                      <div class="event_content">Morning Ritual</div>
+                      <span>4:00 PM</span>
+                      <div class="event_content">City Shopping</div>
                     </div>
-                  </div>
-                  <div class="first_nov">
-                    <h3 class="day_title">Today</h3>
                     <div class="event">
-                      <span>6:00 AM</span>
-                      <div class="event_content">Morning Ritual</div>
+                      <span>7:00 PM</span>
+                      <div class="event_content">Dinner</div>
                     </div>
-                  </div>
+                  </div> <!-- 1st nov ends here -->
+                  <div class="first_nov second">
+                    <h3 class="day_title">2nd Nov 17</h3>
+                    <div class="event">
+                      <span>9:00 AM - 10:00 AM</span>
+                      <div class="event_content">Breakfast</div>
+                    </div>
+                    <div class="event">
+                      <span>10:00 AM - 11:00 AM</span>
+                      <div class="event_content">Teeka</div>
+                    </div>
+                    <div class="event">
+                      <span>11:00 AM - 12:00 PM</span>
+                      <div class="event_content">Sagai</div>
+                    </div>
+                    <div class="event">
+                      <span>12:00 PM - 1:00 PM</span>
+                      <div class="event_content">Lagan + Dolda</div>
+                    </div>
+                    <div class="event">
+                      <span>1:00 PM - 2:00 PM</span>
+                      <div class="event_content">Lunch</div>
+                    </div>
+                    <div class="event">
+                      <span>4:00 PM - 5:00 PM</span>
+                      <div class="event_content">Tel + Ban + Peeti</div>
+                    </div>
+                    <div class="event">
+                      <span>5:00 PM - 6:00 PM</span>
+                      <div class="event_content">Chaak Pooja</div>
+                    </div>
+                    <div class="event">
+                      <span>7:00 PM - 8:00 PM</span>
+                      <div class="event_content">Dinner</div>
+                    </div>
+                  </div> <!-- 2nd nov ends here -->
+                  <div class="first_nov third">
+                    <h3 class="day_title">3rd Nov 17</h3>
+                    <div class="event">
+                      <span>9:00 AM - 10:00 AM</span>
+                      <div class="event_content">Breakfast</div>
+                    </div>
+                    <div class="event">
+                      <span>10:00 AM - 11:00 AM</span>
+                      <div class="event_content">Peravani</div>
+                    </div>
+                    <div class="event">
+                      <span>1:00 PM - 2:00 PM</span>
+                      <div class="event_content">Lunch</div>
+                    </div>
+                    <div class="event">
+                      <span>2:00 PM - 3:00 PM</span>
+                      <div class="event_content">Peeti</div>
+                    </div>
+                    <div class="event">
+                      <span>5:00 PM - 9:00 PM</span>
+                      <div class="event_content">Sangeet</div>
+                    </div>
+                    <div class="event">
+                      <span>6:00 PM - 8:00 PM</span>
+                      <div class="event_content">Dinner</div>
+                    </div>
+                  </div> <!-- 3rd nov ends here -->
+                  <div class="first_nov fourth">
+                    <h3 class="day_title">4th Nov 17</h3>
+                    <div class="event">
+                      <span>9:00 AM - 10:00 AM</span>
+                      <div class="event_content">Breakfast</div>
+                    </div>
+                    <div class="event">
+                      <span>10:00 AM - 11:00 AM</span>
+                      <div class="event_content">Peeti</div>
+                    </div>
+                    <div class="event">
+                      <span>12:00 PM - 1:00 PM</span>
+                      <div class="event_content">Makeup</div>
+                    </div>
+                    <div class="event">
+                      <span>6:00 PM - 7:00 PM</span>
+                      <div class="event_content">Baarat Start</div>
+                    </div>
+                    <div class="event">
+                      <span>7:00 PM - 10:00 PM</span>
+                      <div class="event_content">Dinner</div>
+                    </div>
+                    <div class="event">
+                      <span>8:00 PM - 10:00 PM</span>
+                      <div class="event_content">Reception</div>
+                    </div>
+                    <div class="event">
+                      <span>10:00 PM - 12:00 PM</span>
+                      <div class="event_content">Phere</div>
+                    </div>
+                  </div> <!-- 4th nov ends here -->
                 </div>
                 
               </div> <!-- timeline div ends here 2nd tab basically -->
               <div id="map" class="tab-pane fade">
                 <div class="home">
-                  <h3 class="home_title">Neha Home Address</h3>
-                  <p class="home_address">C-148, Shiv Marg, Singh Bhoomi, Near Jaswant Nagar, Jaipur, 302012</p>
-                  
-                  <div class="card_two card">
-                <div class="card_content margin">
-                <h3>Prashant<img src="img/groom.svg" class="card_icon"></h3>
-                <p>Born in Jobner. I think that`s enough.</p>
-              </div>
-              <div class="card_image_2">
-                    <img src="img/google.svg" class="card_photo google_map">
-                  </div>
-              </div> <!-- card 2 ends here  -->
+                  <!--<h3 class="home_title">Neha Home Address</h3> -->
+                  <p class="home_address"></p>
+                     <a href="https://www.google.co.in/maps/place/Nogia+Classes/@26.928036,75.740956,15z/data=!4m2!3m1!1s0x0:0x2d4ea1f29b6f5648?sa=X&ved=0ahUKEwiRsMWQuJzXAhXLl5QKHcUuBu8Q_BIImgEwCw"><div class="card_two card">
+                      <div class="card_content margin">
+                      <h3>Neha Home Address</h3>
+                      <p>C-148, Shiv Marg, Singh Bhoomi, Near Jaswant Nagar, Jaipur, Rajatshan, 302012</p>
+                    </div>
+                    <div class="card_image_2">
+                          <img src="img/google.svg" class="card_photo">
+                        </div>
+                    </div> <!-- card 2 ends here  -->
+                  </a>
+                </div> <!-- Home div ends here  -->
+                <div class="home">
+                  <!--<h3 class="home_title">Neha Home Address</h3> -->
+                  <p class="home_address"></p>
+                     <a href="https://www.google.co.in/maps/place/RanBanka+Marriage+Garden/@26.9218764,75.7357291,15z/data=!4m5!3m4!1s0x0:0x38e0d8c7185fea9f!8m2!3d26.9218764!4d75.7357291"><div class="card_two card">
+                      <div class="card_content margin">
+                      <h3>Marriage Garden Address</h3>
+                      <p>Vishwamitra Marg, Hanuman Nagar Extension, Officers Campus Colony, Jaipur, 302012</p>
+                    </div>
+                    <div class="card_image_2">
+                          <img src="img/google.svg" class="card_photo">
+                        </div>
+                    </div> <!-- card 2 ends here  -->
+                  </a>
                 </div>
+
               </div> <!-- Map div ends here -->
             </div>
       </div> <!-- tab_pills div ends here -->
@@ -181,7 +316,7 @@
       <!-- Bootstrap core JavaScript
       ================================================== -->
       <!-- Placed at the end of the document so the pages load faster -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
       <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
       <script src="js/app.js"></script>
