--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <body>
 
-      <nav class="navbar navbar-default hidden-lg hidden-md hidden-sm" role="navigation">
-      <div class="container-fluid">
+      <!--<nav class="navbar navbar-default hidden-lg hidden-md hidden-sm" role="navigation"> -->
+      <div class="container-fluid hidden-lg hidden-md">
         <!-- Brand and toggle get grouped for better mobile display -->
         <h4 class="top_title">Neha Weds Prashant<span class="date">4th. Nov`17</span></h4>
         <div class="navbar-header">
@@ -60,7 +60,7 @@
       </div>
     </nav>
 
-      <div class="container top_container">
+      <div class="container top_container hidden-lg hidden-md">
           <div class="top_bar">
             
           </div>
@@ -99,7 +99,7 @@
               </div> <!-- card 2 ends here  -->
               <div class="neha_show">
                 <p>Decent | Sincere | Responsible | Gentleman. I met this guy only twice and I must say he`s got a very positive vibe.</p>
-                <p>Note to groom: Take care of my sister or I will <span>kill you</span></p>
+                <p>Note to groom: Take care of my sister or I will <span class="kill">kill you</span></p>
               </div>
               <div class="card_one card card_three">
                   <div class="card_image">
@@ -120,12 +120,20 @@
                   </div>
                 <div class="card_content">
                 <h3>Neha`s Family</h3>
-                <p>Born in Jobner. I think that`s enough.</p>
+                <p>Jobner Family with lots of kids</p>
                 <p class="down_icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></p>
               </div>
               </div> <!-- card four ends here -->
               <div class="neha_show default">
-                <p>Graduated from IIT Mumbai</p>
+                <p>A big crazy family</p>
+                <ul>
+                  <li>Manak Nogia (Papa)</li>
+                  <li>Nidhi Nogia (Mom)</li>
+                  <li>Neha Nogia (sabse badi)</li>
+                  <li>Vijay Nogia (Shant prani)</li>
+                  <li>Yogesh Nogia(that`s me)</li>
+                  <li>Doli Nogia(Mere sarre saman todne wala)</li>
+                </ul>
               </div>
               <div class="card_one card card_five">
                   <div class="card_image">
@@ -133,25 +141,24 @@
                   </div>
                 <div class="card_content">
                 <h3>Prashant`s Family</h3>
-                <p>Born in Jobner. I think that`s enough.</p>
+                <p>Agra Family with lots of k....</p>
                 <p class="down_icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></p>
               </div>
               </div> <!-- card five ends here -->
               <div class="neha_show default">
-                <p>Graduated from IIT Mumbai</p>
-              </div>
-              <div class="card_one card card_six">
-                  <div class="card_image">
-                    <img src="img/neha-family.jpg" class="card_photo">
-                  </div>
-                <div class="card_content">
-                <h3>Neha`s Family</h3>
-                <p>Born in Jobner. I think that`s enough.</p>
-                <p class="down_icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></p>
-              </div>
-              </div> <!-- card six ends here -->
-              <div class="neha_show default">
-                <p>Graduated from IIT Mumbai</p>
+                <p>A sweet chilling family</p>
+                <p>You must be expecting all the names of Prashant`s Family. Right? Well, I don`t know their names but I know them from heart so :P </p>  
+                <ul>
+                  <li>Jagdish Prakash sagar (Dad)</li>
+                  <li>Mom (Prashant`s Mom)</li>
+                  <li>Prashant Groom (he`s also the elder one)</li>
+                  <li>Badi sister</li>
+                  <li>Middle one</li>
+                  <li>Ankita Sagar (Aha I know her name because we are friends on facebook. See, you gotta be my friend if you want to remembered</li>
+                </ul>
+                <p>Now, that you have reached to this bottom It means you are interested in this wedding, So yes! Please come and enjoy with us. We are waiting to welcome you and serve you.</p>
+
+
               </div>
 
               <div class="thank text-center">
@@ -270,6 +277,10 @@
                       <div class="event_content">Phere</div>
                     </div>
                   </div> <!-- 4th nov ends here -->
+                  <div class="thank text-center">
+                <h3 class="thank_note">Thank you for coming</h3>
+                <img src="img/thank.gif" class="thank_img">
+              </div>
                 </div>
                 
               </div> <!-- timeline div ends here 2nd tab basically -->
@@ -302,9 +313,13 @@
                     </div> <!-- card 2 ends here  -->
                   </a>
                 </div>
-
-              </div> <!-- Map div ends here -->
+                <div class="thank text-center">
+                <h3 class="thank_note">Thank you for coming</h3>
+                <img src="img/thank.gif" class="thank_img">
+              </div>
             </div>
+              </div> <!-- Map div ends here -->
+
       </div> <!-- tab_pills div ends here -->
     </div>
 
