--- a/index.html
+++ b/index.html
@@ -325,6 +325,11 @@
 
       </div> <!-- top_container ends here -->
 
+      <div class="container hidden-xs hidden-sm">
+        <h1> Welcome to Nogia Family</h1>
+        <h5>Please view this site on mobile.</h5>
+      </div>
+
 
 
 
