--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <div class="card_two card">
                 <div class="card_content margin">
                 <h3>Prashant<img src="img/groom.svg" class="card_icon"></h3>
-                <p>Groom. Born in Agra.</p>
+                <p>Groom. Born in Mumbai.</p>
                 <p class="down_icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></p>
               </div>
               <div class="card_image_2">
