--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="card_content margin">
                 <h3>Prashant<img src="img/groom.svg" class="card_icon"></h3>
                 <p>Groom. Born in Mumbai.</p>
-                <p class="down_icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></p>
+                <p class="down_icon" style="left: 22px !important;"><i class="fa fa-chevron-down" aria-hidden="true"></i></p>
               </div>
               <div class="card_image_2">
                     <img src="img/prashant.jpg" class="card_photo">
