--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   </div>
                 <div class="card_content">
                 <h3>Neha Nogia <img src="img/bride.svg" class="card_icon"></h3>
-                <p>Bride. Born in Jobner.</p>
+                <p>Bride.Born in Jobner.</p>
                 <p class="down_icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></p>
               </div>
               </div> <!-- card one ends here -->
@@ -163,7 +163,7 @@
 
               <div class="thank text-center">
                 <h3 class="thank_note">Thank you for coming</h3>
-                <img src="img/thank.gif" class="thank_img">
+                <img src="img/loving_car.gif" class="thank_img">
               </div>
               </div> <!-- events ends here-->
 
@@ -279,7 +279,7 @@
                   </div> <!-- 4th nov ends here -->
                   <div class="thank text-center">
                 <h3 class="thank_note">Thank you for coming</h3>
-                <img src="img/thank.gif" class="thank_img">
+                <img src="img/loving_car.gif" class="thank_img">
               </div>
                 </div>
                 
@@ -315,7 +315,7 @@
                 </div>
                 <div class="thank text-center">
                 <h3 class="thank_note">Thank you for coming</h3>
-                <img src="img/thank.gif" class="thank_img">
+                <img src="img/loving_car.gif" class="thank_img">
               </div>
             </div>
               </div> <!-- Map div ends here -->
